# ai_agent_augmented_sw_dev

./: .gitignore  README.md  main.py  pyproject.toml
data/: jira_data.json
src/sw_architect/: instructions.py  workflow.py
src/tools/: simulate_jira_tool.py
