[project]
name = "ai_agent_augmented_software_development"
version = "0.1.0"
description = "A modular AI agent framework using agno for software development workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.11",
    "fastapi>=0.118.0",
    "jira>=3.10.5",
    "openai>=1.109.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "sqlalchemy>=2.0.43",
]

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]
